# simple-grep

./: Cargo.toml  README.md
src/: main.rs
src/search_directory/: mod.rs  search_directory.rs
src/search_file/: mod.rs  search_file.rs
