[package]
name = "simple-grep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
clap = { version = "4.4.7", features = ["derive"] }
rayon = "1.8.0"
tokio = { version = "1.33.0", features = ["full"] }
anyhow = "1.0.75"
futures = "0.3.29"